<package>
	<name>camera_compression</name>
	<version>1.0.0</version>
	<description>Throttles and/or decimates rgbd images+camerainfo. A standalone package extracted from rtabmap_ros. https://github.com/introlab/rtabmap_ros/</description>

	<maintainer email="jssmith@gatech.edu">Justin Smith</maintainer>

	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  
	<run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nav_msgs</run_depend>
  
	<export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>
